--- a/frontend/admin-panel/package.json
+++ b/frontend/admin-panel/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/lab": "6.0.0-beta.10",
